demo-app/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: web-svc
  annotations:
    nginx.ingress.kubernetes.io/auth-url: http://miniauth.miniauth.svc.cluster.local/barekey/abc
spec:
  ingressClassName: nginx
  rules:
    - host: emojivoto.local.gd
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-svc
                port:
                  name: http
